fixed the overflow with .image3

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ nav img{
     /* line-height: 55px; */
 }
 
-#image2, .image3, #bigflower{
+.image2, .image3, #bigflower{
     opacity: 0;
     position: absolute;
 }   
@@ -363,19 +363,18 @@ footer .footer_container .contact p{
         position: absolute;
     }
 
-    #image2{
+    .image2{
         opacity: 1;
         position: relative;
-        right: 85%;
+        right: 84.7%;
     }
     
     .image3{
         opacity: 1;
         top: 20%;
-        left: 6%;
-        overflow: hidden;
+        margin-right: -50px;
+        /* left: 6%; */
         position: relative;
-        /* border: 1px solid black; */
     }
 
     #bigflower{
